--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/blessed": "^0.1.25",
     "@types/diff": "^7.0.2",
     "blessed": "^0.1.81",
+    "blessed-contrib": "^4.11.0",
     "chalk": "^5.3.0",
     "cli-highlight": "^2.1.11",
     "commander": "^11.1.0",
