--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A powerful AI-powered command line interface tool",
   "main": "dist/index.js",
+  "type": "module",
   "bin": {
     "ai-cli": "dist/index.js",
     "ai": "dist/index.js"
@@ -12,8 +13,8 @@
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "format": "prettier --write src/**/*.{ts,tsx}",
     "prepare": "npm run build"
   },
   "keywords": [
@@ -41,12 +42,19 @@
     "conf": "^12.0.0",
     "diff": "^8.0.2",
     "dotenv": "^16.4.5",
+    "ink": "^4.4.1",
+    "ink-big-text": "^2.0.0",
+    "ink-gradient": "^3.0.0",
+    "ink-select-input": "^5.0.0",
+    "ink-spinner": "^5.0.0",
+    "ink-text-input": "^5.0.1",
     "inquirer": "^9.2.12",
     "marked": "^15.0.12",
     "marked-terminal": "^7.3.0",
     "node-fetch": "^3.3.2",
     "openai": "^4.52.7",
     "ora": "^7.0.1",
+    "react": "^18.2.0",
     "readline": "^1.3.0",
     "yaml": "^2.4.5"
   },
@@ -54,6 +62,7 @@
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "@types/react": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "eslint": "^8.57.0",
