docs(tools): 添加 AI CLI 工具系统文档
- 新增 MCP_USAGE_GUIDE.md 文件，详细介绍 MCP 工具使用方法
- 新增 demo-ai-with-tools.js 和 demo-mcp-usage.js 示例脚本
- 新增 TOOLS_SYSTEM.md 文件，详细说明工具系统架构和功能

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
     "@google/generative-ai": "^0.15.0",
+    "@modelcontextprotocol/sdk": "^1.17.3",
     "@types/blessed": "^0.1.25",
     "@types/diff": "^7.0.2",
     "blessed": "^0.1.81",
